--- a/tiendaTechClase/src/main/resources/application.properties
+++ b/tiendaTechClase/src/main/resources/application.properties
@@ -35,3 +35,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.type.descriptor.sql.BasicBinder=TRACE
+
+# Esta información se utiliza para obtener acceso a su storage.
+firebase.bucket.name=tiendatech-23aeb.firebasestorage.app
+firebase.storage.path=tiendatech
+firebase.json.path=firebase
+firebase.json.file=tiendatech-23aeb-firebase-adminsdk-fbsvc-20e7078a58.json
