--- a/tiendaTechClase/src/main/resources/application.properties
+++ b/tiendaTechClase/src/main/resources/application.properties
@@ -1,40 +1,30 @@
-spring.application.name=tiendaTech
-
 #para definir el puerto donde "escuchará" el servidor
-server.port=9090
- 
-#Para definir el formato de despliegue de fecha/hora del log en la consola
-logging.pattern.dateformat=hh:mm
- 
-#Para eliminar mensajes invasivos de Spring
-spring.main.banner-mode=off
- 
-#En desarrollo el "cache" del servidor (false), en producción "true"
-spring.thymeleaf.cache=false
- 
-#Mysql conexion
-spring.datasource.url=jdbc:mysql://localhost:3306/techshop
-spring.datasource.username=usuario_prueba
-spring.datasource.password=Usuar1o_Clave.
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
- 
-#mostrar información en el log
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.type.descriptor.sql.BasicBinder=TRACE
+server.port=50
 
-#Mysql conexion
+#Para definir el formato de despliegue de fecha y hora del log
+logging.pattern.dateformat=hh:mm
+
+#Para evitar mensajes invasivos
+spring.main.banner-mode=off
+
+#En producción esto es true, en desarrollo es false
+spring.thymeleaf.cache=false
+
+#Conexion a la BD local TechShop en MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/techshop
+
+#Usuario y clave de la base de datos -creaTablas.sql-
 spring.datasource.username=usuario_prueba
 spring.datasource.password=Usuar1o_Clave.
+
+#Driver y plataforma de comunicación
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
- 
-#mostrar información en el log
+
+#para mostrar información en el log
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.type.descriptor.sql.BasicBinder=Trace
 
 # Esta información se utiliza para obtener acceso a su storage.
 firebase.bucket.name=tiendatech-23aeb.firebasestorage.app
