--- a/tiendaTechClase/src/main/resources/application.properties
+++ b/tiendaTechClase/src/main/resources/application.properties
@@ -1,29 +1,33 @@
-# Puerto del servidor
-server.port=78
+#para definir el puerto donde "escuchará" el servidor
+server.port=8080
 
-# Para evitar mensajes invasivos
-spring.main.banner-mode=off
-
-# Formato de log
+#Para definir el formato de despliegue de fecha y hora del log
 logging.pattern.dateformat=hh:mm
 
-# Desactiva cache para desarrollo
+#Para evitar mensajes invasivos
+spring.main.banner-mode=off
+
+#En producción esto es true, en desarrollo es false
 spring.thymeleaf.cache=false
 
-# Conexión a MySQL 
-spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+#Conexion a la BD local TechShop en MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/techshop
 
-# Driver y dialecto
+#Usuario y clave de la base de datos -creaTablas.sql-
+spring.datasource.username=usuario_prueba
+spring.datasource.password=Usuar1o_Clave.
+
+#Driver y plataforma de comunicación
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# Mostrar logs SQL
-spring.jpa.show-sql=true
+#para mostrar información en el log
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.type.descriptor.sql.BasicBinder=Trace
 
-# Crear o actualizar las tablas automáticamente
-spring.jpa.hibernate.ddl-auto=update
+#Esta información se utiliza para obtener acceso a su storage.
+firebase.bucket.name=tiendatech-23aeb.firebasestorage.app
+firebase.storage.path=techshop
+firebase.json.path=firebase
+firebase.json.file=tiendatech-23aeb-firebase-adminsdk-fbsvc-e0d037c603.json
