--- a/tiendaTechClase/src/main/resources/application.properties
+++ b/tiendaTechClase/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #para definir el puerto donde "escuchará" el servidor
-server.port=8080
+server.port=50
 
 #Para definir el formato de despliegue de fecha y hora del log
 logging.pattern.dateformat=hh:mm
@@ -31,3 +31,14 @@ firebase.bucket.name=tiendatech-23aeb.firebasestorage.app
 firebase.storage.path=techshop
 firebase.json.path=firebase
 firebase.json.file=tiendatech-23aeb-firebase-adminsdk-fbsvc-e0d037c603.json
+
+#Propiedades para enviar correos...
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=techshop.2024@gmail.com
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#nombre del servidor donde está la tienda...
+servidor.http=localhost
